--- a/.github/workflows/dotnet-containerize.yml
+++ b/.github/workflows/dotnet-containerize.yml
@@ -38,8 +38,9 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-    - name: Build Image
+    - name: Build Docker Image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/dotnet7redis .
       #working-directory: ./dotnet7/dotnet7redis/
       run: dotnet publish -c Release -p:ContainerImageName=${{ secrets.DOCKER_USERNAME }}/dotnet7redis
     - name: Push Image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/hellodockerfromdotnet7 --all-tags
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/dotnet7redis --all-tags
