--- a/.github/workflows/dotnet-containerize.yml
+++ b/.github/workflows/dotnet-containerize.yml
@@ -39,8 +39,8 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/dotnet7redis .
+        run: docker build -t dotnet7redis .
       #working-directory: ./dotnet7/dotnet7redis/
       run: dotnet publish -c Release -p:ContainerImageName=${{ secrets.DOCKER_USERNAME }}/dotnet7redis
     - name: Push Image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/dotnet7redis --all-tags
+      run: docker push dotnet7redis --all-tags
