--- a/.github/workflows/dotnet-containerize.yml
+++ b/.github/workflows/dotnet-containerize.yml
@@ -20,10 +20,10 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: Restore dependencies
-      # working-directory: ./dotnet7/dotnet7redis/
+      working-directory: ./dotnet7/HelloDocker7/
       run: dotnet restore
     - name: Build
-      # working-directory: ./dotnet7/dotnet7redis/
+      working-directory: ./dotnet7/dockerdotnet7/
       run: dotnet build --no-restore
   docker:
     name:  Docker Build & Push
@@ -38,9 +38,8 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-    - name: Build Docker Image
-        run: docker build -t dotnet7redis .
-      #working-directory: ./dotnet7/dotnet7redis/
-      run: dotnet publish -c Release -p:ContainerImageName=${{ secrets.DOCKER_USERNAME }}/dotnet7redis
+    - name: Build Image
+      working-directory: ./dotnet7/HelloDocker7/
+      run: dotnet publish -c Release -p:ContainerImageName=${{ secrets.DOCKER_USERNAME }}/dockerdotnet7
     - name: Push Image
-      run: docker push dotnet7redis --all-tags
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/dockerdotnet7 --all-tags
